--- a/notebooks/da-project-sommAI.ipynb
+++ b/notebooks/da-project-sommAI.ipynb
@@ -15558,6 +15558,27 @@
     "                    max_price=150, \n",
     "                    min_rate=90)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TF-IDF\n",
+    "\n",
+    "def get_formated_reviews_tfidf(input_std_reviews):\n",
+    "    form_reviews = []\n",
+    "    for review in input_std_reviews:\n",
+    "        form_review = ' '.join(review)\\n\n",
+    "        form_reviews.append(form_review)\n",
+    "    return form_reviews\n",
+    "\n",
+    "reviews_tfidf = get_formated_reviews_tfidf(wine_df_var_filt['std_review'])\n",
+    "\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "vectorizer_fit = vectorizer.fit(reviews_tfidf)"
+   ]
   }
  ],
  "metadata": {
