--- a/notebooks/da-project-sommAI.ipynb
+++ b/notebooks/da-project-sommAI.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# SommAI\n",
     "\n",
-    "### Wine recommender based on NLP and ML\n",
+    "### Wine recommender based on Natural Language Processing and Machine Learning\n",
     "\n",
     "### Dataset: professional wine reviews scraped from WineEnthusiast available on Kaggle:\n",
     "WineEnthusiast source: https://www.winemag.com/?s=&drink_type=wine\n",
@@ -14872,7 +14872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -15944,11 +15944,11 @@
     "                        wine_idx=None, \n",
     "                        max_price=1000000, \n",
     "                        min_rate=80):\n",
-    "    \n",
+    "    try: \n",
     "    # Filter data based on max price and min rating\n",
-    "    df_mlb_filt = input_df.loc[(input_df['price'] < max_price) & \n",
-    "                               (input_df['rating'] >= min_rate)]\n",
-    "    try:\n",
+    "        df_mlb_filt = input_df.loc[(input_df['price'] < max_price) & \n",
+    "                                   (input_df['rating'] >= min_rate)]\n",
+    "    \n",
     "        if df_mlb_filt.shape[0] > 1:\n",
     "    \n",
     "            # Select a wine randomly if none is provided\n",
@@ -15974,7 +15974,7 @@
     "                else:\n",
     "                    print(f'#{i}: {df_mlb_filt.index[index_neigh.flatten()[i]]} | (Distance: {round(distance.flatten()[i], 4)}) \\nPrice: ${df_mlb_filt.price[index_neigh.flatten()[i]]} | Rating: {df_mlb_filt.rating[index_neigh.flatten()[i]]}\\n')\n",
     "    except:\n",
-    "        raise Exception('0 recommendations avaiable. \\nTry to increase maximum price and/or decrease minimum rate.')"
+    "        raise Exception('0 recommendations available. \\nTry to increase maximum price and/or decrease minimum rate.')"
    ]
   },
   {
@@ -16008,9 +16008,11 @@
     }
    ],
    "source": [
-    "# Run query[0] - Baseline\n",
+    "# Run query[0] - Baseline!!\n",
     "\n",
+    "# Get top 5 recommendations for a specific wine\n",
     "# Baseline recommendation - wine_df_var_filt_full_mlb\n",
+    "# Not-standardized descriptors multi-label binarizer weighted\n",
     "get_recommendations(input_df=wine_df_var_filt_full_mlb,\n",
     "                    wine_idx='Cederberg 2010 Sauvignon Blanc (Cederberg)')\n",
     "\n",
@@ -16050,11 +16052,12 @@
    "source": [
     "# Run query[1]\n",
     "\n",
-    "# Standardized recommendation with multilabel binarizer\n",
+    "# Get top 5 recommendations for a specific wine\n",
+    "# Standardized descriptors recommendation with multilabel binarizer\n",
     "get_recommendations(input_df=wine_df_var_filt_mlb,\n",
     "                    wine_idx='Cederberg 2010 Sauvignon Blanc (Cederberg)')\n",
     "\n",
-    "# Way better"
+    "# Way better!"
    ]
   },
   {
@@ -16089,7 +16092,9 @@
    ],
    "source": [
     "# Run query[2]\n",
+    "\n",
     "# Get top 5 recommendations for a random wine\n",
+    "# Standardized descriptors with multilabel binarizer\n",
     "get_recommendations(input_df=wine_df_var_filt_mlb)"
    ]
   },
@@ -16125,7 +16130,9 @@
    ],
    "source": [
     "# Run query[3]\n",
-    "# Get top 5 for a specific wine with filtering by price and rating\n",
+    "\n",
+    "# Get top 5 recommendations for a specific wine with filtering by price and rating\n",
+    "# Standardized descriptors with multilabel binarizer\n",
     "get_recommendations(input_df=wine_df_var_filt_mlb,\n",
     "                    wine_idx='G7 2012 The 7th Generation Gran Reserva Estate Bottled Cabernet Sauvignon (Loncomilla Valley)',\n",
     "                    max_price=50, \n",
@@ -16145,7 +16152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Re-weight descriptors using TF-IDF\n",
+    "# Re-weight descriptors using term frequency–inverse document frequency (TF-IDF)\n",
     "\n",
     "# Define function to format reviews for TF-IDF\n",
     "def get_formated_reviews_tfidf(input_std_reviews):\n",
@@ -16180,6 +16187,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Examples of wine recommendations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 78,
    "metadata": {},
@@ -16210,8 +16224,9 @@
     }
    ],
    "source": [
-    "# Run query[4]\n",
-    "# Standardized recommendation with tf-idf weights\n",
+    "# Get top 5 recommendations for a specific wine\n",
+    "# Standardized and TF-IDF weighted data\n",
+    "\n",
     "get_recommendations(input_df=wine_df_var_filt_tfidf,\n",
     "                    wine_idx='Cederberg 2010 Sauvignon Blanc (Cederberg)')"
    ]
@@ -16247,6 +16262,8 @@
     }
    ],
    "source": [
+    "# Compare it with recommendations from multi-label binarized data\n",
+    "\n",
     "get_recommendations(input_df=wine_df_var_filt_mlb,\n",
     "                    wine_idx='Cederberg 2010 Sauvignon Blanc (Cederberg)')"
    ]
@@ -16282,6 +16299,9 @@
     }
    ],
    "source": [
+    "# Get top 5 recommendations for a specific wine with filtering by price and rating\n",
+    "# Standardized and TF-IDF weighted data\n",
+    "\n",
     "get_recommendations(input_df=wine_df_var_filt_tfidf,\n",
     "                    wine_idx='Michael Pozzan 2010 Cabernet Sauvignon (Alexander Valley)',\n",
     "                    max_price=50, \n",
@@ -16319,6 +16339,8 @@
     }
    ],
    "source": [
+    "# Compare it with recommendations from multi-label binarized data\n",
+    "\n",
     "get_recommendations(input_df=wine_df_var_filt_mlb,\n",
     "                    wine_idx='Michael Pozzan 2010 Cabernet Sauvignon (Alexander Valley)')"
    ]
@@ -16354,6 +16376,9 @@
     }
    ],
    "source": [
+    "# Get top 5 recommendations for a specific wine\n",
+    "# Standardized and TF-IDF weighted data\n",
+    "\n",
     "get_recommendations(input_df=wine_df_var_filt_tfidf,\n",
     "                    wine_idx='Michael Pozzan 2010 Cabernet Sauvignon (Alexander Valley)')"
    ]
@@ -16389,8 +16414,10 @@
     }
    ],
    "source": [
+    "# Compare it with recommendations from multi-label binarized data\n",
+    "\n",
     "get_recommendations(input_df=wine_df_var_filt_full_mlb,\n",
-    "                    wine_idx='Michael Pozzan 2010 Cabernet Sauvignon (Alexander Valley)')\n"
+    "                    wine_idx='Michael Pozzan 2010 Cabernet Sauvignon (Alexander Valley)')"
    ]
   },
   {
@@ -16424,6 +16451,9 @@
     }
    ],
    "source": [
+    "# Get top 5 recommendations for a specific wine\n",
+    "# Standardized and TF-IDF weighted data\n",
+    "\n",
     "get_recommendations(input_df=wine_df_var_filt_tfidf,\n",
     "                    wine_idx='Barton 2013 Paradise City Syrah (Paso Robles Willow Creek District)')"
    ]
@@ -16459,42 +16489,9 @@
     }
    ],
    "source": [
+    "# Compare it with recommendations from multi-label binarized data\n",
+    "\n",
     "get_recommendations(input_df=wine_df_var_filt_mlb,\n",
-    "                    wine_idx='Barton 2013 Paradise City Syrah (Paso Robles Willow Creek District)')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Top 5 recommendations for: \n",
-      "Barton 2013 Paradise City Syrah (Paso Robles Willow Creek District) | Price: $60.0 | Rating: 93 \n",
-      "\n",
-      "#1: Janzen 2012 Cloudy's Vineyard Cabernet Sauvignon (Napa Valley) | (Distance: 0.0014) \n",
-      "Price: $125.0 | Rating: 93\n",
-      "\n",
-      "#2: Hourglass 2013 Estate Cabernet Sauvignon (Napa Valley) | (Distance: 0.0016) \n",
-      "Price: $185.0 | Rating: 95\n",
-      "\n",
-      "#3: Domaine Faiveley 2011 Clos des Cortons Faiveley  (Corton-Rognet) | (Distance: 0.0017) \n",
-      "Price: $225.0 | Rating: 95\n",
-      "\n",
-      "#4: Stag's Leap Wine Cellars 2010 Cask 23 Cabernet Sauvignon (Napa Valley) | (Distance: 0.0017) \n",
-      "Price: $225.0 | Rating: 88\n",
-      "\n",
-      "#5: Vineyard 7&8 2005 Cabernet Sauvignon (Spring Mountain District) | (Distance: 0.0017) \n",
-      "Price: $90.0 | Rating: 92\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "get_recommendations(input_df=wine_df_var_filt_full_mlb,\n",
     "                    wine_idx='Barton 2013 Paradise City Syrah (Paso Robles Willow Creek District)')"
    ]
   }
@@ -16515,7 +16512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
